k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: platform
  labels:
    app.kubernetes.io/part-of: hosting-platform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.phoenix-host.net
        - admin.phoenix-host.net
        - client.phoenix-host.net
      secretName: platform-tls
  rules:
    - host: api.phoenix-host.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-api
                port:
                  number: 3000
    - host: admin.phoenix-host.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-panel
                port:
                  number: 80
    - host: client.phoenix-host.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-panel
                port:
                  number: 80
